    debian/patches/fix_disabling_aot_r131940.dpatch
    debian/patches/fix_null_funcptr_marshalling_r127347.dpatch
    debian/patches/fix_ppc_build_using_gcc-4.4_r131472.dpatch
    debian/patches/fix_recursive_unmanaged_types.dpatch
    debian/patches/fix_sparc_support_r134797.dpatch:
    + Dropped, as already applied upstream.
  * debian/rules
    debian/mono-devel.install
    debian/mono-api-diff.cs:
    + As mono-api-diff was dropped from Mono 2.4 and we need it to track API
      changes we bundle it now in the source package.
      (thanks to C.J. Adams-Collier for this)
  * debian/copyright:
    + Updated for ASP.NET MVC.
  * debian/control:
    + Moved libmono-firebirdsql1.7-cil from Depends to Recommends of
      mono-complete, as libfbclient2 as not available on s390.
    + Added libmono-system-web-mvc1.0-cil package.
    + Added libmono-messaging-rabbitmq2.0-cil and libmono-rabbitmq2.0-cil
      package.
  * debian/patches/fix_array_compare.dpatch:
    + Fix in the compiler needed for IronRuby.
      (thanks goes to C.J. Adams-Collier for providing the patch)
  * debian/control
    debian/mono-runtime.install
    debian/libmono-profiler.install:
    + Moved the libmono-profiler-* libraries to the new libmono-profiler
      package, as they pull libmono0 in which is unneeded for normal usage.
  * debian/control
    debian/mono-devel.install
    debian/mono-mcs.install
    debian/mono-gmcs.install:
    + Moved mcs to mono-mcs and gmcs to mono-gmcs from mono-devel, as that
      caused a lot of confusion. (closes: #525279 and #537081)
    + Added mono-csc to mono-devel in preparation to drop csc in the future as
      it conflicts with the chicken compiler, see #509367.

 -- Mirco Bauer <meebey@debian.org>  Thu, 30 Jul 2009 19:35:10 +0200

mono (2.4+dfsg-6) unstable; urgency=low

  * debian/rules:
    + Force pthread for armel as __thread FTBFS.
    + Build Mono.Simd in test target, which hopefully fixes the failing
      mono/mini tests.
  * debian/control: