@@ -14,6 +14,8 @@ mono (2.4.2.3+dfsg-1~pre1) unstable; urgency=low
     debian/patches/fix_recursive_unmanaged_types.dpatch
     debian/patches/fix_sparc_support_r134797.dpatch:
     + Dropped, as already applied upstream.
+  * debian/rules:
+    + Bumped clilibs where needed.
   * debian/rules
     debian/mono-devel.install
     debian/mono-api-diff.cs:
